frontend/web/css/index.css
.wrap > .container {
    padding: 0 15px 20px;
}
#v-pills-tab .active {
    background: #e51b23 !important;
}
.bottom {
    bottom: 0;
}
#idea {
    font-size: 50px;
}
#infoPoint {
    font-size: 20px;
}
#titleOptimal {
    height: 100px;
}
#moreOptimal {
    top: 70px;
}
#feedBack {
    z-index: 100px;
}
.right {
    right: 0;
}
/*button*/
.btnSpecial {
    line-height: 50px;
    height: 50px;
    text-align: center;
    width: 200px;
    text-decoration: none;
    font-size: 24px;
    margin-top: 15px;
}
.btnHover {
    color: red;
    transition: all 0.3s;
    position: relative;
}
.btnHover span {
    transition: all 0.3s;
}
.btnHover::before {
    content: '';
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 1;
    opacity: 0;
    transition: all 0.3s;
    border-top-width: 1px;
    border-bottom-width: 1px;
    border-top-style: solid;
    border-bottom-style: solid;
    border-top-color: rgba(255,0,0,0.5);
    border-bottom-color: rgba(255,0,0,0.5);
    transform: scale(0.1, 1);
}
.btnHover:hover span {
    letter-spacing: 2px;
}
.btnHover:hover::before {
    opacity: 1;
    transform: scale(1, 1);
}
.btnHover::after {
    content: '';
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 1;
    transition: all 0.3s;
    background-color: rgba(255,0,0,0.1);
}
.btnHover:hover::after {
    opacity: 0;
    transform: scale(0.1, 1);
}

.buttonPoints {
    border: 2px solid #9b9b9b;
    cursor: pointer;
    letter-spacing: 0.2125rem;
    line-height: 1;
    overflow: hidden;
    padding: 20px 30px;
    position: relative;
    text-align: center;
    text-transform: uppercase;
    transition:
            background 5s cubic-bezier(0.19, 1, 0.22, 1),
            border 1s cubic-bezier(0.19, 1, 0.22, 1),
            color 0.6s cubic-bezier(0.19, 1, 0.22, 1);
    user-select: none;
}

.buttonPoints a {
    color: #b1b1b1;
    font-family: "Times New Roman", sans-serif;
    text-decoration: none;
}

.buttonPoints .mask {
    background-color: #fff;
    background-color: rgba(255, 255, 255, 0.5);
    height: 100px;
    position: absolute;
    transform: translate3d(-120%, -50px, 0) rotate3d(0, 0, 1, 135deg);
    transition: all 1.1s cubic-bezier(0.19, 1, 0.22, 1);
    width: 350px;
}

.buttonPoints .shift {
    display: inline-block;
    transition: all 1.1s cubic-bezier(0.19, 1, 0.22, 1);
    vertical-align: text-top;
}

.buttonPoints:hover {
    background-color: rgba(255, 255, 255, 0.05);
    border-color: #fff;
    box-shadow: 0 0 5px rgba(255, 245, 245, 0.8);
    transition: background 0s;
}
.buttonPoints:hover a{
    color: #fff;
}

.button:hover a {
    color: #ffffff;
}

.buttonPoints:hover .mask {
    background-color: #fff;
    transform: translate3d(120%, -100px, 0) rotate3d(0, 0, 1, 90deg);
}

.buttonPoints:hover .shift {
    transform: translateX(15px);
}

.buttonPoints:active {
    background-color: #fff;
}

.buttonPoints:active a {
    color: #ff0000;
}
.jumbotron h1 {
    color: #353535;
}
span.icon {
    margin: 0 5px;
    color: #D64541;
}
/* Global Button Styles */
a.animated-button:link, a.animated-button:visited {
    width: 70%;
    position: relative;
    display: block;
    margin: 25px auto;
    padding: 14px 15px;
    color: #fff;
    font-size:14px;
    font-weight: bold;
    text-align: center;
    text-decoration: none;
    text-transform: uppercase;
    overflow: hidden;
    letter-spacing: .08em;
    border-radius: 0;
    text-shadow: 0 0 1px rgba(0, 0, 0, 0.2), 0 1px 0 rgba(0, 0, 0, 0.2);
    transition: all 1s ease;
}
/* Thar Buttons */
a.animated-button.thar-two {
    font-family: "Times New Roman", sans-serif;
    color: #e51b23;
    width: 150px;
    display: block;
    position: relative;
    border: 2px solid #e51b23;
    transition: all 0.4s cubic-bezier(0.215, 0.61, 0.355, 1) 0s;
}
a.animated-button.thar-two:hover {
    color: #ffffff;
    background-color: transparent;
}
a.animated-button.thar-two:hover:before {
    top: 0%;
    bottom: auto;
    height: 100%;
}
a.animated-button.thar-two:before {
    display: block;
    position: absolute;
    left: 0px;
    bottom: 0px;
    height: 0px;
    width: 100%;
    z-index: -1;
    content: '';
    color: #000 !important;
    background: #e51b23;
    transition: all 0.4s cubic-bezier(0.215, 0.61, 0.355, 1) 0s;
}
a.animated-button.thar-three {
    font-family: "Times New Roman", sans-serif;
    color: #e51b23;
    cursor: pointer;
    display: block;
    position: relative;
    border: 2px solid #e51b23;
    transition: all 0.4s cubic-bezier(0.42, 0, 0.58, 1);
}
a.animated-button.thar-three:hover {
    color: #ffffff !important;
    background-color: transparent;
}
a.animated-button.thar-three:hover:before {
    left: 0%;
    right: auto;
    width: 100%;
}
a.animated-button.thar-three:before {
    display: block;
    position: absolute;
    top: 0px;
    right: 0px;
    height: 100%;
    width: 0px;
    z-index: -1;
    content: '';
    color: #000 !important;
    background: #e51b23;
    transition: all 0.4s cubic-bezier(0.42, 0, 0.58, 1);
}
@media (min-width: 1200px) {
    .btnShowMore {
        left: 43.2%;
    }
}
@media (min-width: 992px) and (max-width: 1200px){
    .btnShowMore {
        left: 40.5%;
    }
}
@media (min-width: 768px) and (max-width: 992px){
    .btnShowMore {
        left: 36.5%;
    }
}
@media (min-width: 576px) and (max-width: 768px){
    .btnShowMore {
        left: 29.5%;
    }
}
@media (max-width: 576px){
    .btnShowMore {
        left: 29.2%
    }
}
/*endbtn*/
.bgGray {
    background-color: #bfbfbd;
}
.brandFont {
    font-family: "brand";
    text-shadow: 5px 5px 4px #bfb9b9;
}
.fontSzBrand {
    font-size: 62px;
}
.fontSlideTitle {
    font-family: "Times New Roman", sans-serif;
}
.fontSzSlideTitle {
    font-size: 32px;
}
.slideIcon {
    animation-name: slideIcon;
    animation-delay: 2s;
    animation-duration: 0.8s;
    animation-fill-mode: both;
}
/* ... */

